<resources>
    <string name="app_name">Redenes</string>
    <string name="icon">An icon</string>
    <string name="create_account">Create an account</string>
    <string name="full_name">Full Name</string>
    <string name="john_doe">John Doe</string>
    <string name="email_id">Email ID</string>
    <string name="email_ex">abc@hotmail.com</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_ex">********</string>
    <string name="register">Register</string>
    <string name="already_have_acct">Already have an account?</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password2">Forgot Password?</string>
    <string name="dont_have_acct">Don\'t have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="enter_email">Please enter your registered email to reset \n your password.</string>
    <string name="enter_new_password">Please enter your new password</string>
    <string name="recover_password">Recover Password</string>
    <string name="one_time_password">One Time Password</string>
    <string name="type_ver_code">Please type verification code</string>
    <string name="enter_four_digit_code">Enter 4 digit code</string>
    <string name="zero">0</string>
    <string name="three_mins">3:00</string>
    <string name="resend">Resend</string>
    <string name="didnt_receive_code">Didn\'t receive code?</string>
    <string name="change_password">Change Password</string>
    <string name="update">Update</string>
    <string name="calendar">Calendar</string>
    <string name="status">Status</string>
    <string name="weather">Weather</string>
    <string name="contacts">Contacts</string>
    <string name="resources">Resources</string>
    <string name="gps">GPS</string>
    <string name="equipment">Equipment</string>
    <string name="daily">Daily</string>
    <string name="vehicles">Vehicles</string>
    <string name="maintenance">Maintenance</string>
    <string name="training">Training</string>
    <string name="ics">ICS</string>
    <string name="audio">Audio</string>
    <string name="e_trigger">E-trigger</string>
    <string name="incidents">Incidents</string>
    <string name="new_incidents">New Incidents</string>
    <string name="messaging">Messaging</string>
    <string name="neighbouring">Neighbouring</string>
    <string name="will_richards">Will Richards</string>
    <string name="no">818.237.6266</string>
    <string name="add1">1234 Main Street</string>
    <string name="add2">Los Angeles</string>
    <string name="logo">logo</string>


    <string-array name="spinner_options">
        <item>Lorem Ipsum Dummy Text</item>
        <item>Lorem Ipsum Dummy Text</item>
    </string-array>
</resources>