<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#000018"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpActivity"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/background_dark">

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/background_white"
            android:paddingStart="32dp"
            android:paddingTop="32dp"
            android:paddingEnd="32dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_id"
                android:textSize="16sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:autofillHints="@string/email_ex"
                android:background="#fff"
                android:hint="@string/email_ex"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColorHint="#000000"
                android:textSize="24sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="5sp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="24dp"
                android:background="#b8b8b8" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="16sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:autofillHints="@string/password_ex"
                android:background="#fff"
                android:hint="@string/password_ex"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColorHint="#000000"
                android:textSize="24sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="5sp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="24dp"
                android:background="#b8b8b8" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textColor="@color/red"
                android:text="@string/forgot_password"
                android:layout_marginBottom="24dp"
                android:textSize="16sp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/register_button"
                android:textColor="#fff"
                android:text="@string/register"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_margin="32dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_acct"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_now"
                    android:textColor="@color/red"
                    android:layout_marginStart="5dp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>