<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ForgotPasswordFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#000018"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/background_dark"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/icon"
                    android:src="@drawable/ic_baseline_arrow_back_ios_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account"
                    android:textColor="#fff"
                    android:textSize="24sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_email"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="24dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:background="@drawable/background_white"
            android:paddingStart="32dp"
            android:paddingTop="32dp"
            android:paddingEnd="32dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_id"
                android:textSize="16sp"
                android:layout_marginTop="32dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:autofillHints="@string/email_ex"
                android:background="#fff"
                android:hint="@string/email_ex"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColorHint="#000000"
                android:textSize="24sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="5sp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="24dp"
                android:background="#b8b8b8" />

            <Button
                android:id="@+id/recover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/register_button"
                android:textColor="#fff"
                android:text="@string/recover_password"
                android:textSize="18sp"
                android:layout_marginTop="32dp"/>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>