<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".OneTimePasswordFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#000018"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/background_dark"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/icon"
                    android:src="@drawable/ic_baseline_arrow_back_ios_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/one_time_password"
                    android:textColor="#fff"
                    android:textSize="24sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_ver_code"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="24dp"/>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:background="@drawable/background_white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="32dp"
                android:paddingTop="32dp"
                android:paddingEnd="32dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/enter_four_digit_code"
                    android:textSize="24sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/editText1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginEnd="8dp"
                        android:textSize="60sp"
                        android:hint="@string/zero"
                        android:textColor="#000"
                        android:gravity="center_horizontal"
                        android:autofillHints="@string/one_time_password"
                        android:inputType="number"/>
                    <EditText
                        android:id="@+id/editText2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginEnd="8dp"
                        android:textSize="60sp"
                        android:hint="@string/zero"
                        android:textColor="#000"
                        android:gravity="center_horizontal"
                        android:autofillHints="@string/one_time_password"
                        android:inputType="number"/>
                    <EditText
                        android:id="@+id/editText3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginEnd="8dp"
                        android:textSize="60sp"
                        android:hint="@string/zero"
                        android:textColor="#000"
                        android:gravity="center_horizontal"
                        android:autofillHints="@string/one_time_password"
                        android:inputType="number"/>
                    <EditText
                        android:id="@+id/editText4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginEnd="8dp"
                        android:textSize="60sp"
                        android:hint="@string/zero"
                        android:textColor="#000"
                        android:gravity="center_horizontal"
                        android:autofillHints="@string/one_time_password"
                        android:inputType="number"/>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/three_mins"
                        android:textSize="18sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/resend"
                        android:textSize="18sp"
                        android:textColor="@color/red"
                        android:layout_alignParentEnd="true"
                        tools:ignore="RelativeOverlap" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/didnt_receive_code"
                    android:layout_gravity="end"
                    android:layout_marginTop="16dp"/>

                <Button
                    android:id="@+id/enter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/register_button"
                    android:text="Enter"
                    android:textColor="@android:color/white"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>